[gd_scene load_steps=11 format=3 uid="uid://db35c3qww2csp"]

[ext_resource type="Script" path="res://UI/gui_canvas.gd" id="1_m4pdg"]
[ext_resource type="Texture2D" uid="uid://drwuomwe03bd8" path="res://UI/GUI/Textures/exp_background.png" id="2_035nj"]
[ext_resource type="Texture2D" uid="uid://12g6pipsvyr4" path="res://UI/GUI/Textures/exp_progress.png" id="3_3o2ov"]
[ext_resource type="FontFile" uid="uid://b1v5rrvoxovby" path="res://Font/tenderness.otf" id="4_qrmbf"]
[ext_resource type="PackedScene" uid="uid://bmrpavygc2kex" path="res://UI/Menus/basic_button.tscn" id="5_nrk06"]
[ext_resource type="Texture2D" uid="uid://bmtn28mis750p" path="res://UI/GUI/Textures/healthbar.png" id="6_sok5r"]
[ext_resource type="Texture2D" uid="uid://cjurt4yv1v8kb" path="res://UI/GUI/Textures/health.png" id="7_lbm0m"]
[ext_resource type="PackedScene" uid="uid://b21bdkkl60usy" path="res://UI/gems_container.tscn" id="8_bddtw"]
[ext_resource type="PackedScene" uid="uid://cxeltrqnhfia" path="res://UI/Menus/transition_shop/transition_shop_menu.tscn" id="9_vare5"]
[ext_resource type="PackedScene" uid="uid://dllwwqeh3ndvh" path="res://Utility/inventory_panel.tscn" id="10_f30n7"]

[node name="GuiMenu" type="CanvasLayer" groups=["gui"]]
process_mode = 3
script = ExtResource("1_m4pdg")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 40.0
texture_under = ExtResource("2_035nj")
texture_progress = ExtResource("3_3o2ov")

[node name="LabelLevel" type="Label" parent="Control/ExperienceBar"]
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("4_qrmbf")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelPanel" type="Panel" parent="."]
process_mode = 2
visible = false
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="LabelLevelUp" type="Label" parent="LevelPanel"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("4_qrmbf")
text = "Level Up !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelUpOptions" type="VBoxContainer" parent="LevelPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="LevelPanel"]

[node name="PanelDeath" type="Panel" parent="."]
process_mode = 2
visible = false
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="LabelResult" type="Label" parent="PanelDeath"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("4_qrmbf")
text = "Level Up !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioVictory" type="AudioStreamPlayer" parent="PanelDeath"]

[node name="AudioDefeat" type="AudioStreamPlayer" parent="PanelDeath"]

[node name="ButtonMenu" parent="PanelDeath" instance=ExtResource("5_nrk06")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[node name="PanelPause" type="Panel" parent="."]
process_mode = 2
visible = false
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="LabelPauseMenu" type="Label" parent="PanelPause"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("4_qrmbf")
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonReturnToGame" parent="PanelPause" instance=ExtResource("5_nrk06")]
layout_mode = 0
offset_left = 40.0
offset_top = 152.0
offset_right = 163.0
offset_bottom = 182.0
text = "Return to game"

[node name="ButtonMenu" parent="PanelPause" instance=ExtResource("5_nrk06")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[node name="HealthBar" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
offset_left = 304.0
offset_top = 200.0
offset_right = 336.0
offset_bottom = 208.0
texture_over = ExtResource("6_sok5r")
texture_progress = ExtResource("7_lbm0m")

[node name="LabelTime" type="Label" parent="."]
custom_minimum_size = Vector2(80, 24)
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("4_qrmbf")
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GemsContainer" parent="." instance=ExtResource("8_bddtw")]

[node name="TransitionShopMenu" parent="." instance=ExtResource("9_vare5")]
visible = false

[node name="InventoryPanel" parent="." instance=ExtResource("10_f30n7")]
visible = false

[node name="InventoryContainer" parent="InventoryPanel" index="0"]
columns = 1

[node name="DragPreview" parent="InventoryPanel" index="2" node_paths=PackedStringArray("inventory_menu_array")]
inventory_menu_array = [null, null]

[connection signal="click_end" from="PanelDeath/ButtonMenu" to="." method="_on_button_menu_click_end"]
[connection signal="click_end" from="PanelPause/ButtonReturnToGame" to="." method="_on_button_return_to_game_click_end"]
[connection signal="click_end" from="PanelPause/ButtonMenu" to="." method="_on_button_menu_click_end"]
[connection signal="next_button_click" from="TransitionShopMenu" to="." method="_on_transition_shop_menu_next_button_click"]
[connection signal="reroll_items" from="TransitionShopMenu" to="." method="_on_transition_shop_menu_reroll_items"]

[editable path="InventoryPanel"]
